# flutter_cpp_bridge

./: .gitignore  .pubignore  CHANGELOG.md  README.md  analysis_options.yaml  pubspec.yaml
.github/: dependabot.yml
.github/workflows/: dart.yml
example/: README.md  pubspec.yaml
example/lib/: libalone.dart  libaservice.dart  libbservice.dart  libcservice.dart  libmessageservice.dart  libmessagezmqservice.dart  main.dart  messages_fcb_msgs_generated.dart  messages_generated.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/linux/liba/: CMakeLists.txt  liba.cpp
example/linux/libalone/: CMakeLists.txt  libalone.cpp
example/linux/libb/: CMakeLists.txt  libb.cpp
example/linux/libc/: CMakeLists.txt  libc.cpp
example/linux/libmessage/: CMakeLists.txt  libmessage.cpp  messages.fbs
example/linux/libmessagezmq/: CMakeLists.txt  libmessagezmq.cpp  messages.fbs
example/linux/runner/: my_application.cc
lib/: flutter_cpp_bridge.dart  flutter_cpp_bridge_method_channel.dart  flutter_cpp_bridge_platform_interface.dart  service.dart  service_pool.dart  standalone_service.dart
linux/: CMakeLists.txt  flutter_cpp_bridge_plugin.cc  flutter_cpp_bridge_plugin_private.h
linux/include/flutter_cpp_bridge/: flutter_cpp_bridge_plugin.h  service_helpers.h
linux/test/: flutter_cpp_bridge_plugin_test.cc
test/: flutter_cpp_bridge_method_channel_test.dart  flutter_cpp_bridge_test.dart
